Integer.MAX サーバー追加